--- a/templates/recettes/show.html.twig
+++ b/templates/recettes/show.html.twig
@@ -9,78 +9,81 @@
         <div class="card-body">
             <h4 class="card-title">{{ recette.nomRecette }}</h4>   
             <p class="card-text">Pour : {{ recette.nombrepersonne }} personnes</p>
-            {#<p class="card-text">Recette proposée par :  {{ recette.user }}</p>#}
+            <p class="card-text">Recette proposée par :  {{ recette.editor }}</p>
             <p class="card-text">Noté : <img src="/icons/note.png" style="width:25px"> {{ recette.getMoyenneNote }}/5 ({{ recette.getTotalNote }})</p>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Difficulté : <img src="/icons/difficulte.png" style="width:20px"> {{ recette.difficulte.nomdifficulte }}</li>
             <li class="list-group-item">Prix : <img src="/icons/prix.png" style="width:15px"> {{ recette.prix.nomprix }}</li>
             <li class="list-group-item">Temps : <img src="/icons/temps.png" style="width:20px"> 
-            {{ recette.getTemps.hour != 0 ?recette.getTemps.hour ~  " h " : ''}}   {{ recette.getTemps.minute }} min</li>
+            {{ recette.deserializer(recette.temps).heure != 0 ?recette.deserializer(recette.temps).heure ~  " h " : ''}}   
+            {{ recette.deserializer(recette.temps).minute }} min</li>
         </ul>
     </div>
 {# TODO formulaire visivle ou pas#}
 {{form_start(form)}}
+
 <button class="btn">{{ button_label|default('Envoyer') }}</button>
 {{form_end(form)}}
 
-{# affichage etapes commentaires #}
-   <div class="jumbotron row">
-
- 
-        <div class="col-lg-4">
-        <h2>Etapes</h2>
-       
-        {% for key, r in recette.getEtape %}
-
-        <div class="card text-center">
-            <div class="card-header">
-                <p> Etape : {{ key + 1}}</p>
+{# box etapes #}
+        <div class="boxShow">
+            <div class='box-formShow'>
+                <div class='box-show-tab'></div>
+            <div class='box-show-title'>
+                <h2>Etapes</h2>
             </div>
-            <div class="card-body">
-                <p class="card-text">{{ r }}</p>
-            </div>
-        </div>    
-
-        {% endfor %}
-        </div>
-        <div class="col-lg-4">
-            <div class="column">
-                <div>
-                <h2>Ingredient</h2>
-        {% for key, i in recette.getIngredient %}
-
-            <div class="card text-center">
-
-            <div class="card-body">
-                <p class="card-text">{{ key + 1}} : {{ i.ingredient }}  {{ i.quantite }} {{ i.unite }}</p>
-            </div>
-        </div>
-
-        {% endfor %}
+                <div class='box-show' style="max-height: 500px;">
+                   <ul>
+                   {% for  r in recette.deserializer(recette.etape) %}
+                        <li>
+                            <p class="card-text"> {{ r.etape }}</p>
+                        </li>
+                    {% endfor %}
+                    </ul>
                 </div>
-                <div>
-                <div class="row">
-                <h2>Commentaires</h2>
-                <a type="button" class="nav-link " >Laisser un commentaire</a>
-                </div>
-                    <div style="height:150px;overflow:auto">
-
-                        {% for c in recette.getCommentaires %}
-
-                            <div style="border:groove;border-radius:10px">
-                                <span> {{ c.pseudo}}    <img src="/icons/note.png" style="width:25px">  {{ c.notes}}</span>
-                                <p>{{ c.commentaire}}</p>
-                            </div>
-
+            </div>
+        </div> <br>   
+{# box ingredients #}
+        <div class="boxShow">
+            <div class='box-formShow'>
+                <div class='box-show-tab'></div>
+            <div class='box-show-title'>
+                <h2>Ingredients</h2>
+            </div>
+                <div class='box-show'>
+                    <ul>
+                        {% for key, i in recette.deserializer(recette.ingredient) %}
+                            <li>
+                                <p>{{ i.ingredient }}  {{ i.quantite }} {{ i.unite }}</p>    
+                            </li>
                         {% endfor %}
-                    </div>
-                </div>    
+                    </ul>
+                </div>   
+            </div>
+        </div><br>
+{# box commentaires #}    
+
+        
+        <div class="boxShow">
+            <div class='box-formShow'>
+                <div class='box-show-tab'></div>
+            <div class='box-show-title'>
+                <img src="/icons/add-512.png" style="width: 20px;">
+                
+            </div>
+            <div class='box-show'>
+                    <ul>
+                        {% for c in recette.commentaires %}
+                            <li>
+                                <span> {{ c.pseudo }}    <img src="/icons/note.png" style="width:25px">  {{ c.notes}}</span>
+                                <p>{{ c.commentaire }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>   
             </div>
         </div>
-    </div>
-
-<div>
 
 
 
