--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,35 +8,40 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+{##}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+<div class='box'>
+  <div class='box-form'>
+    <div class='box-login-tab'></div>
+    <div class='box-login-title'>
+      <div class='i i-login'></div>
+      <h2>Connexion</h2>
+    </div>
+    <div class='box-login'>
+      <div class='fieldset-body' id='login_form'>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+       <p class='field'>
+          <label>E-MAIL</label>
+          <input type='email' class="form-control" value="{{ last_username }}" id='inputEmail' name='email' required autofocus/>
+        </p>
+      	  <p class='field'>
+          <label>PASSWORD</label>
+          <input type="password" name="password" id="inputPassword" class="form-control" required>
+        </p>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+          <label class='checkbox'>
+            <input type='checkbox' value='TRUE' title='Keep me Signed in' /> Se souvenir de moi
+          </label>
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        	<input  type="submit" id='do_login' value='VALIDER' >
+      </div>
+    </div>
+  </div>
+<div class='box-info' style="height:250px"></div>
+  
+</div>
+{##}
 </form>
+
+
 {% endblock %}
