--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -11,39 +11,36 @@
         <a class="nav-link" href="{{ path ('recettes_index') }}">Home <span class="sr-only">(current)</span></a>
       </li>
 
-{# boucle des categorie #}
+{# boucle des categorie#} 
 
  {% for categorie in categories %}
       <li class="nav-item {% if current_menu is defined and current_menu ==  categorie.nomcategorie %}active{% endif %}">
-          <a class="nav-link" href="{{ path('categories_show',{ 'id':categorie.id })}}">{{ categorie.nomcategorie}}</a>
+          <a class="nav-link" href="{{ path('recettes_categorie',{ 'id':categorie.id })}}">{{ categorie.nomcategorie}}</a>
       </li>
  {% endfor %}
      
 {# boucle des categorie fin#}
       {% if app.user %}
+          <li class="nav-item">
+              <a class="nav-link">{{ app.user.pseudo }} </a>
+          </li>
           {% if app.user.isverified %}
-          
                 <li class="nav-item">
-                    <a class="nav-link">{{ app.user.pseudo }} </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Mes Recettes</a>
+                    <a class="nav-link" href="{{ path('mes_recettes') }}">Mes Recettes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('recettes_new') }}">Publier une recette</a>
-                </li>
-                <li class="nav-item"> 
-                    <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
-                </li>
-            
+                </li>  
           {% else %}
                 <li class="nav-item">
                     <img src="/icons/remove.png" alt="" style="width:30px">
-                </li>
-                <li class="nav-item flex-end">
-                    <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+                    
                 </li>
           {% endif %}
+          <li class="nav-item"> 
+              <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+          </li>
+
         {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
